Mobile Navbar tweaks Made logo slightly smaller Fixed submenu having wrong margin Added website name Fixed submenu not always closing

--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -38,6 +38,31 @@
     border-radius: 100%;
 }
 
+@media only screen and (max-aspect-ratio: 13/9){
+    .logo{
+        height: 70%;
+    }
+}
+
+.tagline{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--mainColorFontLight);
+    font-weight: bolder;
+    font-size: 1.25rem;
+}
+@media only screen and (max-width: 300px){
+    .tagline{
+        display: none;
+    }
+}
+
 .container{
     flex-grow: 1;
     display: flex;
@@ -69,7 +94,7 @@
 
 .subcontainer{
     position: absolute;
-    top: 3rem;
+    top: 4rem;
     left: 0;
     right: 0;
     width: 100%;
